--- a/settings.json
+++ b/settings.json
@@ -4,8 +4,8 @@
     "anti_call": false,
     "autorespon": false,
     "user_register": false,
-    "auto_welcome": false,
-    "auto_leave": false,
+    "auto_welcome": true,
+    "auto_leave": true,
 	"prefix": ".",
 	"ownerNumber": "6282237543766",
 	"ownername": "Nanaa",
