--- a/settings.json
+++ b/settings.json
@@ -10,7 +10,7 @@
 	"ownerNumber": "6282237543766",
 	"ownername": "Nanaa",
 	"botname":"Kittynaa",
-	"thumbnail":"thumb.jpg",
+	"thumbnail":"IMG-20220124-WA0059.jpg",
 	"fakethumb":"LordUserbot_Thumb_1.jpg",
 	"url_gif":"https://telegra.ph/file/c864fc477fa22e0d4bfc3.mp4"
 }
